# exploring-duckdb-and-motherduck

./: README.md  pyproject.toml  requirements.txt
config/: .gitkeep
src/: notebook.ipynb
