[tool.poetry]
name = "exploring-duckdb-and-motherduck"
version = "0.1.0"
description = ""
authors = ["Lucas Mesquita <tonsatomicos>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
duckdb = "v0.9.2"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
in-project = true